# NeuroPromptSemanticCompiler

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LEEME_PRIMERO.md  LICENSE  LICENSE_DECISION_REQUIRED.md  NeuroPromptSemanticCompiler.desktop  PROJECT_VISION.md  README.es.md  README.md  ROADMAP.md  ROLLBACK_UI_REDESIGN.md  SAFETY.md  SECURITY.md  TECHNICAL_SPEC.md  UI_REDESIGN_REPORT.md  UI_TEST_REPORT.md  architecture-diagram.html  pyproject.toml  run_gui.sh  verify_app.sh
configs/: compilation_profiles.json  compiler_defaults.json  extraction_patterns.json
docs/: ARQUITECTURA.md  AUDIT_FEATURE_MATRIX.md  CLI.md  CODEX_HERMES_USAGE.md  COMPRESSION_LEVELS.md  CONTEXTUAL_HELP_REFINEMENT_REPORT.md  DISTRIBUCION_UBUNTU.md  EVALUATION_METHOD.md  FINAL_COMPETITION_BASELINE_REPORT.md  FINAL_COMPETITION_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_PATH_AUDIT.md  GLOSARIO_ES.md  GUIA_RAPIDA_ES.md  IMPLEMENTATION_P0_PLAN.md  LINUX_INSTALL.es.md  LINUX_INSTALL.md  MANUAL_USUARIO_ES.md  MANUAL_VISUAL_QA_CHECKLIST_ES.md  MENTAL_MODEL.md  NSL_SPEC.md  PRE_GLOSSARY_RECOVERY_REPORT.md  PRIVACIDAD.md  PUBLICATION_PRIVACY_AUDIT.md  REFINEMENT_BASELINE_REPORT.md  REFINEMENT_FINAL_REPORT.md  RELEASE_READINESS_REPORT.md  SEMANTIC_SEEDS.md  UI_LANGUAGE_AND_GLOSSARY_AUDIT_ES.md  VISUAL_POLISH_PLAN_2026-06-11.md
examples/: app_builder_prompt.txt  codex_project_prompt.txt  ejemplo_auditoria_seguridad.txt  ejemplo_desarrollo_app.txt  hermes_agent_prompt.txt  messy_prompt.txt  research_prompt.txt
scripts/: run.sh  setup_venv_instructions.sh  smoke_test.sh
(+106 files in other folders)
